Test Comment Change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- header  -->
   <header id="home">
-    <!-- Nav Bar -->
+    <!-- Nav Bar Change -->
     <nav class="navbar">
       <div class="nav-center">
         <!-- Nav Header -->
